@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-06T08:19:01Z",
-  "count_outdated" : 639,
-  "uniques_outdated" : 365,
-  "count" : 669,
+  "timestamp" : "2022-11-06T16:20:50Z",
+  "count_outdated" : 641,
+  "uniques_outdated" : 366,
+  "count" : 670,
   "uniques" : 380,
   "clones" : [
-    {
-      "timestamp": "2022-10-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-24T00:00:00Z",
       "count": 2,
