@@ -1,3 +1,11 @@
+2022-11-06T16:20:50Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3405094142 # 1004
+* notice: last 14d: unq all: 5 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 365 639 / 380 669
+* notice: next accum: outdated-unq outdated-all / unq all: 366 641 / 380 670
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-10-23] / []
+
 2022-11-06T08:19:01Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3403558870 # 1003
 * notice: last 14d: unq all: 5 30
